--- a/style.css
+++ b/style.css
@@ -1,47 +1,64 @@
-body{
-    background-color: rgba(136, 0, 255, 0.473);
-    font-family: Arial, Helvetica, sans-serif;
-}
-h1{
-    text-align: center;
-    border: 2px solid rgb(255, 255, 255);
-}
-p{
-    font-size: 20px;
-}
-
-img{
-    max-width: 200px;
-    background-color: rgb(189, 125, 46);
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.5;
+    color: #342d2d;
+    max-width: 900px;
+    margin: 0 auto;
     padding: 20px;
-    border: 5px dotted navy;
-    display: block;
-    margin: auto;
-
-}
-ul{
-    background-color: #f0f0f0;
-    padding: 20px 40px;
-    width: 200px;
-    margin: auto;
-    list-style-type: circle;
-    border-radius: 20px;
-}
-footer{
-    padding: 10px;
-    margin-top: 20px;
-    background-color: gray;
-    text-align: center;
-}
-li{
-    border: 2px solid rgb(157, 54, 54);
-    padding: 8px 15px;
-    border-radius: 20px;
-    margin-bottom: 5px;
-    background-color: lightcyan;
-    transition: color .2s ease-in, transform .2s ease;
-}
-li:hover{
-    color: #fff9c4;
-    transform: translate(3px);
-}
+    position: relative;
+    background-image: url(abstract-light-green-polygonal-space-background-with-connecting-dots-and-lines-connection-structure-and-science-background-futuristic-hud-design-free-vector.jpg)    
+    }
+    h1{
+        border: 5px solid rgb(0, 0, 0);
+        margin-left: auto;
+        text-align:center
+    }
+    h2{
+        border: 2px solid black;
+        text-align: center;
+    }
+   
+    img{
+        max-height: 200px;
+        background-color: rgb(137, 157, 164);
+        margin: auto;
+        
+    }
+    h3{
+        border: 2px solid black;
+        text-align: center;
+    }
+    h4{
+        border: 2px solid black;
+        text-align: center;
+    }
+    h5{
+        border: 2px solid black;
+        text-align: center;
+    }
+    p{
+        font-size: larger;
+    }
+    ul, ol {
+        margin-left: 20px;
+        margin-bottom: 20px;
+        list-style-type: none;
+        margin-left: 0;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 5px;
+    }
+    
+    li {
+        flex: 1 1;
+        background-color: #e7f2fa;
+        padding: 8px 15px;
+        border-radius: 20px;
+        font-size: 0.9rem;
+        border: 1px solid #b3d7ea;
+        transition: color .2s ease-in, transform .2s ease;
+    }
+    li:hover{
+        color: #cbc4ff;
+        transform: translate(3px);
+    }
